Added Access netwrok view.

--- a/meerkat_auth/templates/base.html
+++ b/meerkat_auth/templates/base.html
@@ -34,7 +34,10 @@
         {% block menu %}
         <ul class="nav navbar-nav">
           <li class="navbar-nav__users"><a href="/{{g.get('language')}}/users/" >{{ _('Users') }}</a></li>
-          <li class="navbar-nav__roles"><a href="/{{g.get('language')}}/roles/" >{{ _('Roles') }}</a></li>
+          <li class="navbar-nav__roles"><a href="/{{g.get('language')}}/roles/" >{{ _('Access') }}</a></li>
+          <li class="navbar-nav__logout">
+            <a href="/auth/logout" > {{ _('Log out') }} </a>
+          </li>
         </ul>
         {% endblock %}
         <div class="lang-sel">
