--- a/meerkat_auth/templates/users/index.html
+++ b/meerkat_auth/templates/users/index.html
@@ -40,14 +40,12 @@
 		</div>
 	</div>
 </div>
-
+<div class="breaker"></div>
 {% endblock %}
 {% block pageJS %}
 <script>
-var users = {{users|safe}};
 var user = {{user|safe}};
 
-console.log(users);
 $('.navbar-nav li').removeClass('active');
 $('.navbar-nav__users').addClass('active');
 drawUserTable();
