--- a/meerkat_auth/src/sass/_custom.scss
+++ b/meerkat_auth/src/sass/_custom.scss
@@ -321,6 +321,10 @@ body.blue{
     }
 }
 
+input:read-only{
+    border:none;
+}
+
 .loading{
     background: url('/static/img/loading.gif');
     background-repeat: no-repeat;
