--- a/meerkat_auth/templates/base.html
+++ b/meerkat_auth/templates/base.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>{{ _('Authentication and User Management | Meerkat Public Health Surveillance') }}</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" />
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   <script>
   language = "{{g.get('language')|safe}}";
   </script>
