Improved account editing restrictions.

--- a/meerkat_auth/templates/base.html
+++ b/meerkat_auth/templates/base.html
@@ -37,7 +37,7 @@
           <li class="navbar-nav__users"><a href="{{root}}/{{g.get('language')}}/users/" >{{ _('Users') }}</a></li>
           <li class="navbar-nav__roles"><a href="{{root}}/{{g.get('language')}}/roles/" >{{ _('Access') }}</a></li>
           <li class="navbar-nav__logout">
-            <a href="{{root}}/api/logout" > {{ _('Log out') }} </a>
+            <a href="{{root}}/api/logout?url=/auth" > {{ _('Log out') }} </a>
           </li>
         </ul>
         {% endblock %}
