--- a/meerkat_auth/templates/base.html
+++ b/meerkat_auth/templates/base.html
@@ -7,8 +7,21 @@
   <title>{{ _('Authentication and User Management | Meerkat Public Health Surveillance') }}</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" />
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
-  <script>
-  language = "{{g.get('language')|safe}}";
+  <script type="text/javascript">
+    //Get the current language.
+    language = "{{g.get('language')|safe}}";
+    //Configure the cookie consent box. 
+     
+    window.cookieconsent_options = {
+      "message":"{{_('This website uses cookies to ensure you get the best experience.')}}",
+      "dismiss":"{{_('I Understand')}}",
+      "learnMore":"{{_('More information')}}",
+      "link":null,
+      "theme":false //We've added our own ccs theme in src/sass/_cookieconsent.scss
+    };
+  </script>
+  <script type="text/javascript" 
+          src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js">
   </script>
   {% block head %} {% endblock %}
 </head>
