Updated langauge and url root now configurable.

--- a/meerkat_auth/templates/base.html
+++ b/meerkat_auth/templates/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>{{ _('Authentication and User Management | Meerkat Public Health Surveillance') }}</title>
+  <title>{{ _('Authentication and User Management | Public Health Surveillance') }}</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" />
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
   <script type="text/javascript">
@@ -39,7 +39,7 @@
         </button>
         <div class="navbar-brand scroll-top">
           <span class="hidden-xs hidden-sm">
-            <b>{{_('Authentication and User Management')}}</b> &middot; {{_('Meerkat Public Health Surveillance')}}
+            <b>{{_('Authentication and User Management')}}</b> &middot; {{_('Public Health Surveillance')}}
           </span>
           <span class="visible-xs visible-sm"><b>User Manager</b> &middot; Meerkat </span>
         </div>
@@ -86,7 +86,7 @@
       {% block footer %}
       <div class="container">
 	      <div class="footer__label pull-right col-xs-12 col-sm-6 col-md-5 less-padding-col">
-		      {{_('Meerkat Public Health Surveillance')}} 
+		      {{_('Public Health Surveillance')}} 
 	      </div>
       </div>
       {% endblock %}
