--- a/meerkat_auth/templates/login.html
+++ b/meerkat_auth/templates/login.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-  <title>{{ _('Authentication and User Management | Meerkat Public Health Surveillance') }}</title>
+  <title>{{ _('Authentication and User Management | Public Health Surveillance') }}</title>
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" /> 
   <script type="text/javascript">
     //Get the current language.
@@ -26,7 +26,7 @@
 </head>
 <body class="blue">
 
-<div class="login-title"> {{_('Meerkat Public Health Surveillance') }}</div>
+<div class="login-title"> {{_('Public Health Surveillance') }}</div>
 <div class="breaker"></div>
 <div class="row">
 	<div class="login-box-holder">
