Syncing compiled languages and shorted cookie consent button text.

--- a/meerkat_auth/templates/base.html
+++ b/meerkat_auth/templates/base.html
@@ -14,7 +14,7 @@
      
     window.cookieconsent_options = {
       "message":"{{_('This website uses cookies to ensure you get the best experience.')}}",
-      "dismiss":"{{_('I Understand')}}",
+      "dismiss":"{{_('Understood')}}",
       "learnMore":"{{_('More information')}}",
       "link":null,
       "theme":false //We've added our own ccs theme in src/sass/_cookieconsent.scss
