--- a/meerkat_auth/templates/roles/index.html
+++ b/meerkat_auth/templates/roles/index.html
@@ -14,10 +14,14 @@
 			<div class="chartBox__heading">
 				{{ _('Access Network') }}
 			</div>
-			<div class="chartBox__content" >
-				<div id='role-vis' class="col-xs-8"></div>
-                <div class='access-network-form col-xs-4'></div>
+			<div class="chartBox__content access-network-container" >
+				<div id='role-vis' class="col-xs-12"></div>
+                <div class='access-network-form col-xs-3'></div>
+                <div class='selection-details col-xs-12'>
+
+                </div>
 			</div>
+
 		</div>
 	</div>
 </div>
