Add sentry to auth.

--- a/meerkat_auth/templates/js.html
+++ b/meerkat_auth/templates/js.html
@@ -1,4 +1,9 @@
 <!-- JS -->
+<script src="{{ url_for('static', filename='js/raven.js') }}"></script>
+{% if config.SENTRY_JS_DNS %}
+  <script>Raven.config('{{config.SENTRY_JS_DNS}}').install();</script>
+{% endif %}
+
 <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
 <script src="{{ url_for('static', filename='js/jed.js') }}"></script>
