--- a/meerkat_auth/templates/login.html
+++ b/meerkat_auth/templates/login.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
   <title>{{ _('Authentication and User Management | Public Health Surveillance') }}</title>
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" /> 
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}" />
   <script type="text/javascript">
     //Get the current language.
     language = "{{g.get('language')|safe}}";
-    //Configure the cookie consent box. 
+    //Configure the cookie consent box.
     window.cookieconsent_options = {
       "message":"{{_('This website uses cookies to ensure you get the best experience.')}}",
       "dismiss":"{{_('I Understand')}}",
@@ -19,7 +19,7 @@
       "theme":false //We've added our own ccs theme in src/sass/_cookieconsent.scss
     };
   </script>
-  <script type="text/javascript" 
+  <script type="text/javascript"
           src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js">
   </script>
   {% block head %} {% endblock %}
@@ -33,9 +33,9 @@
 				{{ _('Login') }}
                 <div class="lang-sel pull-right"></div>
 			</div>
-            
+
 			<div class="chartBox__content" >
-				<form id="login-form" class="login-form">
+				<div id="login-form" class="login-form">
                     <div class="form-group"></div>
                     <div class="form-group">
                         <label>{{_('Username')}}</label>
@@ -46,7 +46,7 @@
                         <input type="password" class="text" name="password" />
                     </div>
                     <input type="submit" value="Login" class="submit pull-right" />
-				</form>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -74,7 +74,7 @@ $('input.submit').click( function(evt){
             if( data.responseJSON.hasOwnProperty( 'message' ) ){
                 alert( data.responseJSON.message );
             }else{
-                alert( i18n.gettext("There has been a server error. " + 
+                alert( i18n.gettext("There has been a server error. " +
                                     "Please contact administrator and try again later.") );
             }
         },
